src/tests/errors/parsing/test09.cmp

pro gram xxx   (* White space inside keywords is not ok *)
begin 
end